# xeus-calc

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  environment-dev.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  unix-build.yml
.github/workflows/: main.yml
include/xeus-calc/: xeus_calc_config.hpp  xeus_calc_interpreter.hpp
notebooks/: Xeus-calc.ipynb
notebooks/.ipynb_checkpoints/: Xeus-calc-checkpoint.ipynb
share/jupyter/kernels/xeus-calc/: kernel.json  kernel.json.in
src/: main.cpp  xeus_calc_interpreter.cpp  xeus_calc_interpreter.hpp
test/: CMakeLists.txt  test_calculator.cpp
